--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -6,6 +6,68 @@
 
 }
 
+@media (max-width: 900px)
+{
+    .home__mainC{
+        display:flex;
+        justify-content: center;
+    }
+
+    .home__main{
+        width: 400px;
+    }
+    .Menu__Mobile{
+        border-top: 0px;
+        border-bottom: 0px;
+    }
+    .header{
+        border-bottom: 1px solid white;
+        
+    }
+    .s{
+        height: 100px;
+        margin-bottom: 10px;
+    }
+    .history{
+        width: 400px;
+        margin: 0 auto;
+    }
+    .chart__main{
+        display:"flex";
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 400px;
+        overflow: hidden;
+    }
+    .chart{
+        width: 400px;
+        overflow: hidden;
+        margin: 0 auto;
+    }
+    .swap_bh{
+        display: flex;
+        justify-content: center;
+    }
+    .swap_b{
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+    }
+    #footer_m{
+        
+        padding:0;
+        margin:0;
+    }
+    #footer{
+        width: 448px;
+        display: flex;
+        justify-content: center;
+        padding:0;
+        margin:0;
+    }
+}
+
 @media (max-width: 600px)
 {
 .Menu__Mobile{
@@ -19,4 +81,25 @@
 .s{
     height: 90px;
 }
+
+.home__mainC{
+    display:flex;
+    justify-content: center;
+}
+.chart__main{
+    display:"flex";
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 400px;
+    overflow: hidden;
+}
+.chart{
+    width: 390px;
+    overflow: hidden;
+    margin: 0 auto;
+}
+
+
+
 }
