--- a/src/components/views/Navigation.css
+++ b/src/components/views/Navigation.css
@@ -1,8 +1,9 @@
 
 .Menu__Mobile{
     width: 100%;
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
+    border-top: 1px solid rgba(118, 118, 144, 0.4);
+    border-bottom: 1px solid rgba(118, 118, 144, 0.4);
+    box-shadow: none;
 
 }
 
@@ -21,12 +22,12 @@
         border-bottom: 0px;
     }
     .header{
-        border-bottom: 1px solid white;
+        border-bottom: 1px solid rgba(118, 118, 144, 0.4);
         
     }
     .s{
-        height: 100px;
-        margin-bottom: 10px;
+       
+        margin-bottom: 1px;
     }
     .history{
         width: 400px;
@@ -75,11 +76,11 @@
     border-bottom: 0px;
 }
 .header{
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid rgba(118, 118, 144, 0.4);
     
 }
 .s{
-    height: 90px;
+   margin-bottom: 1px;
 }
 
 .home__mainC{
