fixed for initial deployment

--- a/src/components/views/Navigation.css
+++ b/src/components/views/Navigation.css
@@ -1,11 +1,12 @@
 
 .Menu__Mobile{
     width: 100%;
-    border-top: 1px solid rgba(118, 118, 144, 0.4);
     border-bottom: 1px solid rgba(118, 118, 144, 0.4);
     box-shadow: none;
+    
 
 }
+
 
 @media (max-width: 900px)
 {
@@ -15,7 +16,7 @@
     }
 
     .home__main{
-        width: 400px;
+        max-width: 400px;
     }
     .Menu__Mobile{
         border-top: 0px;
@@ -30,7 +31,7 @@
         margin-bottom: 1px;
     }
     .history{
-        width: 400px;
+        max-width: 400px;
         margin: 0 auto;
     }
     .chart__main{
@@ -38,11 +39,11 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        width: 400px;
+        max-width: 400px;
         overflow: hidden;
     }
     .chart{
-        width: 400px;
+        max-width: 400px;
         overflow: hidden;
         margin: 0 auto;
     }
@@ -53,7 +54,7 @@
     .swap_b{
         display: flex;
         justify-content: center;
-        margin: 0 auto;
+        margin: 0;
     }
     #footer_m{
         
@@ -61,7 +62,7 @@
         margin:0;
     }
     #footer{
-        width: 448px;
+        max-width: 400px;
         display: flex;
         justify-content: center;
         padding:0;
@@ -92,11 +93,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 400px;
+    max-width: 400px;
     overflow: hidden;
 }
 .chart{
-    width: 400px;
+    max-width: 400px;
     overflow: hidden;
     margin: 0 auto;
 }
