--- a/src/style/global.css
+++ b/src/style/global.css
@@ -33,5 +33,34 @@ input[type=number] {
 }
 
 .MuiStepLabel-labelContainer .MuiStepLabel-label {
-    color: white!important;
+    color: white !important;
+}
+
+.css-1v2lvtn-MuiPaginationItem-root {
+    color: white !important;
+}
+
+.footer-icon {
+    fill: #14A9FF;
+    width: 24px;
+    height: 24px;
+}
+
+.footer-icon2 {
+    fill: #14A9FF;
+    width: 24px;
+    height: 24px;
+}
+
+.footer-icon3 {
+    fill: #14A9FF;
+    width: 24px;
+    height: 24px;
+    margin: 0px 20px;
+}
+
+.footer-icon4 {
+    fill: #14A9FF;
+    width: 24px;
+    height: 24px;
 }
