fixed for axl token issue

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -64,3 +64,8 @@ input[type=number] {
     width: 24px;
     height: 24px;
 }
+
+/* #squid-widget {
+    display: flex;
+    justify-content: center;
+} */
